--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title><!DOCTYPE html>
-        <html lang="en">
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <body>
 
 <div ng-app="myApp" ng-controller="formCtrl">
     <form novalidate>
-        Nome:<br>
-        <input type="text" ng-model="nome"><br>
-        Email:<br>
-        <input type="email" ng-model="email">
-        Senha:<br>
-        <input type="password" ng-model="senha">
+        <label for="nome">Nome</label>
+        <input id="nome" type="text" ng-model="nome">
+        <label for="nome">Email</label>
+        <input id="email" type="email" ng-model="email">
+        <label for="nome">Senha</label>
+        <input id="senha" type="password" ng-model="senha">
         <br><br>
-        <button ng-click="reset()">RESET</button>
+        <button type="button" ng-click="reset()">Reset</button>
+        <button type="button" ng-click="cadastro()">Enviar</button>
+        <button type="button" ng-click="getUsers()">Atualizar</button>
     </form>
+
+    <table>
+        <tr ng-repeat="user in users">
+            <td>{{ user.id }}</td>
+            <td>{{ user.nome }}</td>
+            <td>{{ user.email }}</td>
+        </tr>
+    </table>
+
 </div>
 
 <script>
@@ -50,13 +57,13 @@
             $scope.senha = '';
         }
 
+        $scope.getUsers();
+
     });
 </script>
 
 </body>
-</html></title>
-</head>
-<body>
-
-</body>
 </html>
+
+
+
