--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<head>
+    <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
+</head>
 <body>
 
 <div ng-app="myApp" ng-controller="formCtrl">
@@ -19,9 +27,9 @@
 
     <table>
         <tr ng-repeat="user in users">
-            <td>{{ user.id }}</td>
-            <td>{{ user.nome }}</td>
-            <td>{{ user.email }}</td>
+            <td>{{ user.User.id }}</td>
+            <td>{{ user.User.nome }}</td>
+            <td>{{ user.User.username }}</td>
         </tr>
     </table>
 
@@ -29,33 +37,45 @@
 
 <script>
     var app = angular.module('myApp', []);
-    app.controller('formCtrl', function ($scope, $http) {
+    app.controller('formCtrl', function ($scope, $http, $sce) {
         $scope.nome = '';
         $scope.email = '';
         $scope.senha = '';
         $scope.retornoCadastro = '';
         $scope.users = '';
+        $scope.dados = {'User' :{'nome': $scope.nome, 'username': $scope.email, "senha": $scope.senha}};
+        $scope.urlLista = "http://victormm.pe.hu/users/lista";
 
         $scope.cadastro = function () {
-            $http.get("http://victormm.pe.hu/users/cadastro")
-
-                .then(function (response) {
-                    $scope.retornoCadastro = response.data;
-                });
-
+            console.log($scope.dados);
+            $http({
+                method : "POST",
+                url : "http://victormm.pe.hu/users/cadastro",
+                data: { 'User' : $scope.dados}
+            }).then(function mySuccess(response) {
+                $scope.retornoCadastro = response.data;
+            }, function myError(response) {
+                $scope.retornoCadastro = response.statusText;
+            });
         };
         $scope.getUsers = function () {
-            $http.get("http://victormm.pe.hu/users/lista")
-                .then(function (response) {
-                    $scope.users = response.data;
-                });
+
+            $http({method: 'GET', url:$scope.urlLista})
+                .then(
+                    function(json) {
+                        $scope.users = json.data;
+                    },
+                    function(error) {
+                        console.log('An error occured');
+                    }
+                );
         };
 
         $scope.reset = function () {
             $scope.nome = '';
             $scope.email = '';
             $scope.senha = '';
-        }
+        };
 
         $scope.getUsers();
 
